# bitup

./: .gitignore  CMakeLists.txt  Privacy_Policy.txt  README.md
include/: PyAPI_Encapsulation.h  dirop.h  fop.h  formatext.h  renaini.h  renalog_core.h  sqlite3.h
include/hash/: hash4cxx.h  md5.hpp  sha1.hpp  sha224.hpp  sha256.hpp  sha384.hpp  sha512.hpp
py/: .gitignore  Makefile  gui.py  hashfile.py
src/: CMakeLists.txt  PyAPI_Encapsulation.cpp  dirop.cpp  fop.cpp  formatext.cpp  renaini.cpp  renalog_core.cpp
src/hash/: md5.cpp  sha1.cpp  sha224.cpp  sha256.cpp  sha384.cpp  sha512.cpp
src/shell/: commandlist.cpp  commandlist.h  shell.cpp
